--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -1,4 +1,7 @@
 {
+  "dark-mode": "Dark Mode",
+  "more": "More",
+  "main": "Main",
   "software": "Software",
   "download": "Download",
   "documentation": "Documentation",
