New site footer

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -1,6 +1,7 @@
 {
   "dark-mode": "Dark Mode",
   "more": "More",
+  "search": "Search",
   "main": "Main",
   "software": "Software",
   "download": "Download",
