Responsive site menu and language selector

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -5,6 +5,7 @@
   "main": "Main",
   "software": "Software",
   "download": "Download",
+  "doc": "Doc",
   "documentation": "Documentation",
   "wiki": "Wiki",
   "wiki-url": "https://en.opensuse.org/",
