--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -26,7 +26,7 @@
   "connect": "Connect",
   "facebook-group": "Facebook group",
   "telegram-group": "Telegram group",
-  "telegram-group-url": "https://t.me/opensuseusers",
+  "telegram-group-url": "https://t.me/openSUSE_group",
   "mail-lists": "Mail lists",
   "irc-channels": "IRC channels",
   "social-media": "Social media",
