--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -1,26 +1,37 @@
 {
-    "software": "Software",
-    "download": "Descargar",
-    "documentation": "Documentación",
-    "wiki": "Wiki",
-    "wiki-url": "https://es.opensuse.org",
-    "forum": "Foro",
-    "forum-url": "https://forums.opensuse.org/forumdisplay.php/837-Espa%C3%B1ol",
-    "development": "Desarrollo",
-    "development-document": "Documento",
-    "development-document-url": "https://en.opensuse.org/Portal:Development",
-    "build-service": "Servicio de compilaciones",
-    "information": "Información",
-    "news": "Noticias",
-    "release-notes": "Informe de novedades",
-    "events": "Eventos",
-    "planet": "Planeta",
-    "shop": "Tienda",
-    "community": "Comunidad",
-    "connect": "Conectar",
-    "facebook-group": "Grupo de Facebook",
-    "google-group": "Grupo de Google+",
-    "mail-lists": "Listas de correo",
-    "irc-channels": "Canales de IRC",
-    "social-media": "Redes sociales"
+  "dark-mode": "Modo Nocturno",
+  "opensuse-universe": "Universo openSUSE",
+  "search": "Buscar",
+  "main": "Principal",
+  "main-site": "Sitio principal",
+  "software": "Software",
+  "download": "Descargar",
+  "doc": "Doc",
+  "documentation": "Documentación",
+  "wiki": "Wiki",
+  "wiki-url": "https://es.opensuse.org/",
+  "forum": "Foro",
+  "forum-url": "https://forums.opensuse.org/forumdisplay.php/837-Espa%C3%B1ol",
+  "development": "Desarrollo",
+  "development-document": "Documento",
+  "development-document-url": "https://en.opensuse.org/Portal:Development",
+  "build-service": "Servicio de compilaciones",
+  "information": "Información",
+  "news": "Noticias",
+  "release-notes": "Notas de lanzamiento",
+  "events": "Eventos",
+  "planet": "Planeta",
+  "shop": "Tienda",
+  "community": "Comunidad",
+  "connect": "Connect",
+  "facebook-group": "Grupo de Facebook",
+  "telegram-group": "Grupo de Telegram",
+  "telegram-group-url": "https://t.me/openSUSE_group",
+  "mail-lists": "Listas de correo",
+  "irc-channels": "Canales IRC",
+  "social-media": "Redes sociales",
+  "other": "Otros",
+  "guide-unofficial": "Guía (no oficial)",
+  "mirrors": "Mirrors",
+  "lizards": "Lizards"
 }
