--- a/src/langs/es.json
+++ b/src/langs/es.json
@@ -18,7 +18,7 @@
   "build-service": "Servicio de compilaciones",
   "information": "Información",
   "news": "Noticias",
-  "release-notes": "Notas de lanzamiento",
+  "release-notes": "Informe de novedades",
   "events": "Eventos",
   "planet": "Planeta",
   "shop": "Tienda",
@@ -28,7 +28,7 @@
   "telegram-group": "Grupo de Telegram",
   "telegram-group-url": "https://t.me/openSUSE_group",
   "mail-lists": "Listas de correo",
-  "irc-channels": "Canales IRC",
+  "irc-channels": "Canales de IRC",
   "social-media": "Redes sociales",
   "other": "Otros",
   "guide-unofficial": "Guía (no oficial)",
