megamenu: add survey and kernel links

--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -16,12 +16,15 @@
   "development-document": "Document",
   "development-document-url": "https://en.opensuse.org/Portal:Development",
   "build-service": "Build service",
+  "kernel": "Kernel",
   "information": "Information",
   "news": "News",
   "release-notes": "Release notes",
   "events": "Events",
   "planet": "Planet",
   "shop": "Shop",
+  "status": "Status",
+  "survey": "Survey",
   "community": "Community",
   "connect": "Connect",
   "facebook-group": "Facebook group",
